完成语料生成

--- a/mini_project/knowledge_graph/utils/qa_pair.template
+++ b/mini_project/knowledge_graph/utils/qa_pair.template
@@ -1,1 +1,1 @@
-{{subject_entity}}\t{{relationship}}\t{{object_entity}}\t{{subject_entity}} 的 {{relationship}} 是什么?
+{{ subject_entity }}##{{ relationship }}##{{ object_entity }}##{{ subject_entity }} 的 {{ relationship }} 是什么?
